--- a/reactlashes/eyelashes/src/pages/Glue/Glue.css
+++ b/reactlashes/eyelashes/src/pages/Glue/Glue.css
@@ -11,6 +11,33 @@
   top: -5px;
 }
 
+.sub:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.add:hover {
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
+.glue {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-top: 200px;
+}
+
+.glue-header {
+  background-color: rgba(0, 0, 0, 0.2);
+  padding: 10px;
+  width: 400px;
+  border: 3px solid white;
+  width: 300px;
+  margin: 0;
+}
+
 .glue-list {
   display: flex;
   flex-direction: row;
@@ -29,7 +56,14 @@
   flex-direction: column;
   align-items: center;
   border: 1px solid white;
-  padding: 5px;
+
+  padding: 10px 10px 5px 10px;
   height: 180px;
+  justify-content: center;
   position: relative;
+}
+
+.glue-item:hover {
+  transform: scale(1.01);
+  cursor: default;
 }
